# frdm-kl05z-quick-setup-sdk1

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  arm-none-eabi-gcc.cmake
device/: MKL05Z4.svd
docs/: Doxyfile.in
source/: main.c
